<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LexLator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LexLator</string>
    <string name="nav_header_subtitle">Knowledge Is Power</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="state_list">Your Legislators</string>

    <string name="congress">Congress</string>
    <string name="senate">Senate</string>
    <string name="house">House of Representatives</string>
    <string name="bills">Bills</string>

    <string name="state">Enter your state</string>
    <string name="text_select_district">Select your district</string>
    <string name="text_find_district">Find your district</string>
    <string name="text_address">Address</string>
    <string name="text_city">City</string>
    <string name="text_zip">Zip Code</string>

    <string name="go_district">Find My District</string>
    <string name="go_state">Find My Legislators</string>

    <string-array name="states_array">
        <item>Select state…</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="default_state_district">State\'s ##th Congressional District</string>
    <string name="senators">Senators</string>
    <string name="representatives">Representatives</string>

    <string name="current_legislators_url">https://theunitedstates.io/congress-legislators/legislators-current.json</string>
    <string name="current_legislators_path">current_legislators.json</string>
    <string name="current_progress">Current Progress</string>

    <string name="default_legislator_title">Typ. First Last</string>
    <string name="text_state">State</string>
    <string name="default_state">Default</string>
    <string name="text_party">Party</string>
    <string name="default_party">Default</string>
    <string name="text_district">District</string>
    <string name="default_district">69</string>
    <string name="legislator_image_description">Profile picture for the selected legislator</string>

    <string name="finances_text">Financial Interests</string>
    <string name="finances_disclaimer">Provided by OpenSecrets.org</string>
    <string name="finances_icon_description">Icon for OpenSecrets.org</string>
    <string name="finances_default">Insert Financial Interests</string>
    <string name="information_text">Information</string>
    <string name="bio_text">Biography</string>
    <string name="committees_text">Committees</string>
    <string name="text_recent_actions">Recent Actions</string>
    <string name="sponsored_bills_text">Sponsored Bills</string>
    <string name="votes_text">Recent Votes</string>
    <string name="contact_text">Contact Information</string>
    <string name="address_text">Address</string>
    <string name="address_default">Default Address</string>
    <string name="phone_text">Phone Number</string>
    <string name="phone_default" tools:ignore="TypographyDashes">+1(123)456-7890</string>
    <string name="website_text">Website</string>
    <string name="website_default">https://www.examplewebsite.person.org/</string>
    <string name="social_media_text">Social Media</string>

    <string name="committee_default_name">Chamber Committee on Stuff and Things</string>
    <string name="party_text">Party</string>
    <string name="title_text">Title</string>
    <string name="rank_text">Rank</string>
    <string name="start_text">Start</string>
    <string name="title_default">Default Title</string>
    <string name="party_default">Default Party</string>
    <string name="rank_default">Default Rank</string>
    <string name="start_default">1999–12–31</string>

    <string name="text_summary">Summary</string>
    <string name="text_top_contributors">Top Contributors</string>
    <string name="text_top_industries">Top 10 Industries</string>
    <string name="text_total">Total Contributions</string>
    <string name="text_spent">Amount Spent</string>
    <string name="text_cash">Cash On Hand</string>
    <string name="text_debt">Reported Debt</string>
    <string name="default_finance_value">$0.00</string>
    <string name="default_contributor_name">Concerned Citizens of America</string>
    <string name="text_total_value">Total</string>
    <string name="text_individuals">Individuals</string>
    <string name="text_pac">Political Action Committees</string>

    <string name="default_vote_date">31 Dec., 1999</string>
    <string name="text_vote_number">Vote #:</string>
    <string name="default_vote_number">0000</string>
    <string name="default_position">Yea</string>
    <string name="default_description">This is a more detailed description of what this specific vote was about</string>

    <string name="default_bill_name">C.1234</string>
    <string name="text_last_action">Last Action:</string>
    <string name="default_bill_date">31 Dec., 1999</string>
    <string name="text_bill_title">Title</string>
    <string name="default_bill_title">This is the default tile for C.1234 which is meant to do things for reasons.</string>
    <string name="text_bill_introduced">Introduced</string>
    <string name="text_bill_last_action">Last Action</string>
    <string name="default_last_action">Sent to Committee on Stuff and Things</string>
    <string name="default_bill_summary">No summary available</string>

    <string name="twitter_content">Twitter Icon</string>
    <string name="facebook_content">Facebook Icon</string>
    <string name="instagram_content">Instagram Icon</string>
    <string name="youtube_content">YouTube Icon</string>

    <string name="text_about">About</string>
    <string name="text_data_sources">Data Sources</string>
    <string name="data_description">
        \tAll of the data presented in this application is pulled from other projects. This
        application does not generate any original content.
    </string>
    <string name="text_legislator_data">Legislator Information</string>
    <string name="legislator_source">
        \tInformation on Members of Congress, including current members, committees, contact
        information, and social media is pulled from the
        <a href="https://github.com/unitedstates/congress-legislators">congress-legislators project</a>.
        The congress-legislators project is a community repository originally developed by the team
        behind GovTrack.us and now maintained by a large community of volunteers.
        \n\n\tImages and biographies for Members of Congress are pulled from The Congressional
        Biographical Directory at http://bioguide.congress.gov/
    </string>
    <string name="text_legislative_data">Bills &amp; Votes</string>
    <string name="legislative_source">
        \tInformation on recent bills and votes in both the House and Senate is pulled periodically
        from the ProPublica Congress API. This is the only public API for legislative information.
        \n\n\tIf you want to change the applications update frequency, you can do so from the
        application\'s settings menu.
    </string>
    <string name="text_financial_data">Financial Information</string>
    <string name="financial_source">
        \tFinancial information is pulled from OpenSecrets.org, a website maintained by The Center
        for Responsive Politics.
        \n\n\tFrom their website:
        \n\t\"Nonpartisan, independent and nonprofit, the Center for Responsive Politics is the
        nation\'s premier research group tracking money in U.S. politics and its effect on elections
        and public policy. Our vision is for Americans to be empowered by access to clear and
        unbiased information about money\'s role in politics and policy and to use that knowledge
        to strengthen our democracy. Our mission is to produce and disseminate peerless data and
        analysis on money in politics to inform and engage Americans, champion transparency, and
        expose disproportionate or undue influence on public policy.\"
    </string>
    <string name="text_other_data">Other Data</string>
    <string name="other_source">
        \tDistrict information is acquired by querying the Google Civic Information API.
    </string>
</resources>
