<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_vote_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vote_number_text"
            style="@style/multipartHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/text_vote_number"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/vote_number"
            style="@style/multipartHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_vote_number" />

        <TextView
            android:id="@+id/vote_date"
            style="@style/multipartHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/default_vote_date" />

        <TextView
            android:id="@+id/vote_position"
            style="@style/multipartHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_position"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/vote_details"
        style="@style/textBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/default_description"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_vote_main"
        app:layout_constraintStart_toStartOf="@+id/layout_vote_main"
        app:layout_constraintTop_toBottomOf="@+id/layout_vote_main" />
</androidx.constraintlayout.widget.ConstraintLayout>